OpenSLP Change Log (stable-1-0)
-------------------------------
Please make entries to this log (in addition to the CVS log) that describe 
major changes to the OpenSLP code base.  An entries should be separated by
blank lines and include the date, developer's email, and change description.
=============================================================================

03/05/02
Added patch from Garth Bushell that fixes an SLP url parsing problem.

*** Tag OpenSLP-1.0.8 ***

02/25/02 matt@caldera.com
Added patch from Arun Barboza to handle '==' SLPv1 predicates.  This patch
allows better interoperability with Novell SLP networks.

02/13/02 matt@caldera.com
Added fix from Arun Barboza to make V1 DAAdverts use the same encoding as
the request

02/13/02 matt@caldera.com
Fixed a problem in SLPProcessMessage where errorcodes were not being returned
resulting in attempts to send non-allocated sendbufs (i.e. SEGV).

02/13/02 matt@caldera.com
Fixed a problem where SLPReg() would hang if used against a DA or SA that
prematurely dropped connections

02/05/02 matt@caldera.com
Force use of numeric IP addresses in all DAAdvert and SAAdvert messages.

02/05/02 matt@caldera.com
Fixed bug where idle connections to DAs were not being aged.

02/05/02 matt@caldera.com
Added code so that 'slptool -v' will return the path of the slp.conf file
libslp.so is configured to use.

*** Tag OpenSLP-1.0.7 ***

01/25/02 matt@caldera.com
Fixed all documentation to reflect use of the new net.slp.multicastIF setting

01/24/02 matt@caldera.com
Changed all instances of close() where socket descriptors are closed
to closesocket() on WIN32

01/24/02 matt@caldera.com
Applied patch from Juergen Kreileder that provides the net.slp.multicastIF
slp.conf setting.  net.slp.multicastIF is useful in setting up OpenSLP on
multi-homed machines where it is desireable to configure which interface 
should send multicast traffic.

01/24/02 matt@caldera.com